--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -8,7 +8,7 @@ metadata:
     kyverno.io/ignore: "true"
 spec:
   instances: 1
-  imageName: ghcr.io/cloudnative-pg/postgresql:15.5-5
+  imageName: dmcavinue/pgvector:15
   inheritedMetadata:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
