--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -8,7 +8,7 @@ metadata:
     kyverno.io/ignore: "true"
 spec:
   instances: 1
-  imageName: dmcavinue/pgvector:15
+  imageName: dmcavinue/pgvector:15-1
   inheritedMetadata:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
@@ -26,6 +26,7 @@ spec:
   superuserSecret:
     name: immich-database-superuser
   postgresql:
+    shared_preload_libraries: vectors.so
     parameters:
       max_connections: "600"
       shared_buffers: 512MB
