--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   instances: 1
   imageName: dmcavinue/pgvector:15-1
+  imagePullPolicy: Always
   inheritedMetadata:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
@@ -28,8 +29,8 @@ spec:
   superuserSecret:
     name: immich-database-superuser
   postgresql:
-    # shared_preload_libraries:
-    # - vectors.so
+    shared_preload_libraries:
+    - vectors.so
     parameters:
       max_connections: "600"
       shared_buffers: 512MB
