--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -8,7 +8,7 @@ metadata:
     kyverno.io/ignore: "true"
 spec:
   instances: 1
-  imageName: dmcavinue/pgvector:15-1
+  imageName: dmcavinue/pgvector:15
   imagePullPolicy: Always
   inheritedMetadata:
     labels:
