--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -347,7 +347,7 @@ tasks:
       - vault write databases/config/home_assistant
           plugin_name="postgresql-database-plugin"
           allowed_roles="home-assistant"
-          connection_url="postgresql://{{`{{username}}`}}:{{`{{password}}`}}@home-assistant-rw.home-automation:5432/home_assistant"
+          connection_url="postgresql://{{`{{username}}`}}:{{`{{password}}`}}@home-assistant-db.home-automation:5432/home_assistant"
           username="postgres"
           password="{{.HASS_POSTGRES_PASSWORD}}"
           username_template="{{`{{.RoleName}}`}}-{{`{{random 8}}`}}"
@@ -361,7 +361,7 @@ tasks:
       - vault write databases/config/immich
           plugin_name="postgresql-database-plugin"
           allowed_roles="immich"
-          connection_url="postgresql://{{`{{username}}`}}:{{`{{password}}`}}@immich-db-rw.media:5432/immich"
+          connection_url="postgresql://{{`{{username}}`}}:{{`{{password}}`}}@immich-db.media:5432/immich"
           username="postgres"
           password="{{.IMMICH_POSTGRES_PASSWORD}}"
           username_template="{{`{{.RoleName}}`}}-{{`{{random 8}}`}}"
