--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -31,7 +31,7 @@ spec:
   managed:
     roles:
     - name: role_vault
-      ensure: role_present
+      ensure: present
       login: false
       superuser: true
       disablePassword: true
