--- a/kubernetes/clusters/k2s/home-automation/home-assistant/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/database/cluster.yaml
@@ -28,7 +28,7 @@ spec:
   managed:
     roles:
     - name: role_vault
-      ensure: role_present
+      ensure: present
       login: false
       superuser: true
       disablePassword: true
