--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -33,7 +33,7 @@ spec:
     - name: role_vault
       ensure: present
       login: false
-      superuser: true
+      superuser: false
       disablePassword: true
   postgresql:
     shared_preload_libraries:
