--- a/kubernetes/clusters/k2s/media/kustomization.yaml
+++ b/kubernetes/clusters/k2s/media/kustomization.yaml
@@ -8,5 +8,6 @@ resources:
   - ./externalsecret.yaml
   - ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
+  - ./excalidraw/ks.yaml
   - ./immich/ks.yaml
 
