--- a/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
               capabilities:
                 drop:
                   - ALL
-              runAsNonRoot: true
+              runAsNonRoot: false
               readOnlyRootFilesystem: false
               allowPrivilegeEscalation: false
               seccompProfile:
