--- a/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    defaultPodOptions:
+    # defaultPodOptions:
       # securityContext:
       #   fsGroup: 101
       #   runAsUser: 101
