--- a/.env.example
+++ b/.env.example
@@ -135,6 +135,10 @@ TIDBYT_API_KEY="xxxxxxxx"
 TIDBYT_DEVICE_ID="xxxxxxxx"
 TIDBYT_MQTT_TOPIC="plm/xxxxxxxx"
 
+# unpoller
+UP_UNIFI_DEFAULT_USER="xxxxxxxx"
+UP_UNIFI_DEFAULT_PASS="xxxxxxxx"
+
 # zwave
 ZWAVE_NETWORK_KEY="xxxxxxxx"
 
