--- a/kubernetes/clusters/k1s/kube-system/issuers/vault/vault.yaml
+++ b/kubernetes/clusters/k1s/kube-system/issuers/vault/vault.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   vault:
     path: pki/int_ca/sign/${ENVIRONMENT}
-    server: http://vault.vault:8200
+    server: https://vault.logfold.com
     auth:
       kubernetes:
         role: vault-issuer
