--- a/kubernetes/clusters/k1s/security/externalsecret.yaml
+++ b/kubernetes/clusters/k1s/security/externalsecret.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault.vault:8200"
+      server: "https://vault.logfold.com"
       path: "secret"
       version: "v2"
       auth:
