--- a/kubernetes/clusters/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/security/dex/app/externalsecret.yaml
@@ -51,7 +51,7 @@ spec:
                   - "https://oauth.logfold.com/oauth2/callback"
               - id: k0s-weave-gitops
                 name: k0s-weave-gitops
-                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                secret: "{{.DEX_GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
                   - https://gitops.logfold.com/oauth2/callback
 
@@ -63,7 +63,7 @@ spec:
                   - "https://oauth.k1s.logfold.com/oauth2/callback"
               - id: k1s-weave-gitops
                 name: k1s-weave-gitops
-                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                secret: "{{.DEX_GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
                   - https://gitops.k1s.logfold.com/oauth2/callback
 
