--- a/kubernetes/clusters/k2s/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/clusters/k2s/flux-system/weave-gitops/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
           oidcSecret:
             create: true
             clientID: "k2s-weave-gitops"
-            clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
+            clientSecret: "{{ .DEX_GITOPS_CLIENT_SECRET }}"
             issuerURL: "https://dex.logfold.com"
             redirectURL: "https://gitops.${DOMAIN}/oauth2/callback"
   dataFrom:
