--- a/kubernetes/clusters/k2s/flux-system/kustomization.yaml
+++ b/kubernetes/clusters/k2s/flux-system/kustomization.yaml
@@ -4,4 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
-  - ./weave-gitops/ks.yaml
+  #- ./weave-gitops/ks.yaml
