--- a/.env.example
+++ b/.env.example
@@ -1,148 +1,108 @@
-# bitwarden
-BITWARDEN_EMAIL="user@example.com"
 
-# cloudflare
-CLOUDFLARE_EMAIL="user@example.com"
-CLOUDFLARE_TOKEN="xxxxxxxx"
-CLOUDFLARE_RECORD_NAME="ingress.example.com"
+BITWARDEN_EMAIL="xxxxxxxx"
 
-# dex
-DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
-
-# emqx
+# secret/database/emqx
 EMQX_ADMIN_PASSWORD="xxxxxxxx"
 EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
-EMQX_LB_IP="192.168.0.109"
 
-# frigate
-FRIGATE_PLUS_API_KEY="xxxxxxxx"
-FRIGATE_DVR_URL="192.168.0.1:7441"
-FRIGATE_CAM1_NAME="cam_1"
-FRIGATE_CAM1_ID="xxxxxxxx"
-FRIGATE_CAM2_NAME="cam_2"
-FRIGATE_CAM2_ID="xxxxxxxx"
-FRIGATE_CAM3_NAME="cam_3"
-FRIGATE_CAM3_ID="xxxxxxxx"
-FRIGATE_CAM4_NAME="cam_4"
-FRIGATE_CAM4_ID="xxxxxxxx"
-FRIGATE_CAM5_NAME="cam_5"
-FRIGATE_CAM5_ID="xxxxxxxx"
-FRIGATE_CAM6_NAME="cam_6"
-FRIGATE_CAM6_ID="xxxxxxxx"
-FRIGATE_CAM7_NAME="cam_7"
-FRIGATE_CAM7_ID="xxxxxxxx"
-FRIGATE_CAM8_NAME="cam_8"
-FRIGATE_CAM8_ID="xxxxxxxx"
+# secret/flux-system/notification
+SLACK_WEBHOOK="xxxxxxxx"
 
-# grafana
-GRAFANA_ADMIN_USER="xxxxxxxx"
-GRAFANA_ADMIN_PASSWORD="xxxxxxxx"
-GRAFANA_LDAP_SERVER="ldap.example.com"
-GRAFANA_LDAP_USERNAME="xxxxxxxx"
-GRAFANA_LDAP_PASSWORD="xxxxxxxx"
-GRAFANA_LDAP_ROOT="dc=example,dc=com"
-
-# home-assistant
-HASS_POSTGRES_SUPER_USER="postgres"
-HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
-HASS_POSTGRES_USER="xxxxxxxx"
-HASS_POSTGRES_PASSWORD="xxxxxxxx"
+# secret/home-automation/home-assistant
+HASS_ALARM_CODE="xxxxxxxx"
 HASS_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
 HASS_DB_BACKUP_SECRET="xxxxxxxx"
-HASS_ALARM_CODE="xxxxxxxx"
 HASS_DEPLOY_KEY_B64="xxxxxxxx"
-HASS_GIT_REPO="git@github.com:example/home-assistant.git"
+HASS_DRAC_IP="xxxxxxxx"
+HASS_GIT_REPO="xxxxxxxx"
 HASS_HACS_TOKEN="xxxxxxxx"
-HASS_LDAP_ROOT="dc=example,dc=com"
-HASS_LOCAL_DOMAIN="example.com"
-HASS_LOCATION_LAT="00.0000000"
-HASS_LOCATION_LONG="-00.0000000"
-HASS_DRAC_IP="192.168.1.5"
+HASS_LDAP_ROOT="xxxxxxxx"
+HASS_LOCATION_LAT="xxxxxxxx"
+HASS_LOCATION_LONG="xxxxxxxx"
+HASS_POSTGRES_PASSWORD="xxxxxxxx"
+HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+HASS_POSTGRES_SUPER_USER="xxxxxxxx"
+HASS_POSTGRES_USER="xxxxxxxx"
 
-# immich
-IMMICH_JWT_SECRET="xxxxxxxx"
-IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
-IMMICH_POSTGRES_SUPER_USER="postgres"
-IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
-IMMICH_POSTGRES_USER="xxxxxxxx"
-IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
+# secret/home-automation/tidbyt-proxy
+TIDBYT_API_KEY="xxxxxxxx"
+TIDBYT_DEVICE_ID="xxxxxxxx"
+
+# secret/home-automation/unifi-downloader
+UNIFI_DOWNLOADER_HOST="xxxxxxxx"
+UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
+UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
+
+# secret/ingress/cloudflare
+CLOUDFLARE_EMAIL="xxxxxxxx"
+CLOUDFLARE_RECORD_NAME="xxxxxxxx"
+CLOUDFLARE_TOKEN="xxxxxxxx"
+
+# secret/media/immich
 IMMICH_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
 IMMICH_DB_BACKUP_SECRET="xxxxxxxx"
+IMMICH_JWT_SECRET="xxxxxxxx"
+IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
+IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
+IMMICH_POSTGRES_USER="xxxxxxxx"
+IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
 
-# ingresses
-INGRESS_ADGUARD_IP="192.168.1.2"
-INGRESS_PROXMOX_IP="192.168.1.5"
-INGRESS_KVM_IP="192.168.0.104"
-INGRESS_VACUUM_IP="192.168.0.105"
-INGRESS_UNIFI_IP="192.168.0.1"
-INGRESS_DRAC_IP="192.168.1.6"
+# secret/monitoring/grafana
+GRAFANA_ADMIN_PASSWORD="xxxxxxxx"
+GRAFANA_ADMIN_USER="xxxxxxxx"
+GRAFANA_LDAP_PASSWORD="xxxxxxxx"
+GRAFANA_LDAP_ROOT="xxxxxxxx"
+GRAFANA_LDAP_USERNAME="xxxxxxxx"
 
-# kopia
-KOPIA_GCS_PROJECT="some-gcs-project"
-KOPIA_GCS_BUCKET="some-gcs-bucket"
-KOPIA_PASSWORD="xxxxxxxx"
+# secret/security/dex
+DEX_GITOPS_CLIENT_SECRET="xxxxxxxx"
+DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
 
-# lldap
-LLDAP_POSTGRES_SUPER_USER="postgres"
-LLDAP_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
-LLDAP_POSTGRES_USER="xxxxxxxx"
-LLDAP_POSTGRES_PASSWORD="xxxxxxxx"
+# secret/security/lldap
 LLDAP_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
 LLDAP_DB_BACKUP_SECRET="xxxxxxxx"
 LLDAP_JWT_SECRET="xxxxxxxx"
+LLDAP_LDAP_BASE_DN="xxxxxxxx"
+LLDAP_LDAP_USER_EMAIL="xxxxxxxx"
 LLDAP_LDAP_USER_PASS="xxxxxxxx"
-LLDAP_LDAP_USER_EMAIL="dan@example.com"
+LLDAP_POSTGRES_PASSWORD="xxxxxxxx"
+LLDAP_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+LLDAP_POSTGRES_SUPER_USER="xxxxxxxx"
+LLDAP_POSTGRES_USER="xxxxxxxx"
 LLDAP_SERVER_KEY_SEED="xxxxxxxx"
-LLDAP_LDAP_BASE_DN="dc=example,dc=com"
-LLDAP_LB_IP="192.168.0.5"
 
-# loki - 'htpasswd -c loki_auth <user>'
-LOKI_MINIO_ACCESS_KEY="xxxxxxxx"
-LOKI_MINIO_SECRET_KEY="xxxxxxxx"
-LOKI_BASIC_AUTH="xxxxxxxx"
-LOKI_USERNAME="xxxxxxxx"
-LOKI_PASSWORD="xxxxxxxx"
-
-# minio
-MINIO_ROOT_USER="xxxxxxxx"
-MINIO_ROOT_PASSWORD="xxxxxxxxx"
-MINIO_CONSOLE_SECRET_KEY="xxxxxxxx"
-MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
-
-# nfs
-NFS_SERVER_IP="192.168.1.4"
-
-# oauth2-proxy
+# secret/security/oauth2-proxy
 OAUTH2_CLIENT_SECRET="xxxxxxxx"
 OAUTH2_COOKIE_SECRET="xxxxxxxx"
 
-# registry
-REGISTRY_USERNAME="xxxxxxxx"
-REGISTRY_PASSWORD="xxxxxxxx"
+# secret/storage/minio
+MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
+MINIO_CONSOLE_SECRET_KEY="xxxxxxxx"
+MINIO_ROOT_PASSWORD="xxxxxxxx"
+MINIO_ROOT_USER="xxxxxxxx"
 
-# restic
-RESTIC_URL="rest:https://xxxxxxxx:xxxxxxxx@restic.example.com"
+# secret/volsync/esphome
 RESTIC_ESPHOME_PASSWORD="xxxxxxxx"
+
+# secret/volsync/home-assistant
 RESTIC_HASS_PASSWORD="xxxxxxxx"
+
+# secret/volsync/volsync
+RESTIC_URL="xxxxxxxx"
+
+# secret/volsync/zwavejs
 RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
 
-# slack
-SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
-
-# tidbyt
-TIDBYT_API_KEY="xxxxxxxx"
-TIDBYT_DEVICE_ID="xxxxxxxx"
-TIDBYT_MQTT_TOPIC="plm/xxxxxxxx"
-
-# unpoller
+# secret/monitoring/unpoller
 UP_UNIFI_DEFAULT_USER="xxxxxxxx"
 UP_UNIFI_DEFAULT_PASS="xxxxxxxx"
 
-# zwave
-ZWAVE_NETWORK_KEY="xxxxxxxx"
-
-# unifi-downloader
-UNIFI_DOWNLOADER_HOST="https://unifi.example.com"
-UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
-UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
+# additional
+INGRESS_ADGUARD_IP="xxxxxxxx"
+INGRESS_DRAC_IP="xxxxxxxx"
+INGRESS_PROXMOX_IP="xxxxxxxx"
+INGRESS_UNIFI_IP="xxxxxxxx"
+INGRESS_VACUUM_IP="xxxxxxxx"
+NFS_SERVER_IP="xxxxxxxx"
