--- a/kubernetes/clusters/k2s/media/immich/database/externalsecret.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/externalsecret.yaml
@@ -27,11 +27,11 @@ spec:
     - secretKey: access-key
       remoteRef:
         key: /media/immich
-        property: IMMICH_DB_BACKUP_ACCESS_KEY
+        property: MINIO_ACCESS_KEY
     - secretKey: secret
       remoteRef:
         key: /media/immich
-        property: IMMICH_DB_BACKUP_SECRET
+        property: MINIO_SECRET
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
